Sat Feb 11 21:26:08 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * tests/Bug_2130_Regression/descriptors/run_test.pl
        
          Fixed the command line option to start the NodeApplication
          to enable real-time support.
          Thanks Roland Schimmack <Roland.Schimmack @ gmx.de> for
          reporting this error.
        
Sat Feb 11 21:00:00 UTC 2006  xiong,ming  <ming.xiong@vanderbilt.edu>

        * ciao/Server_init.cpp

          Removed an extra explicit qualification

Sat Feb 11 18:49:21 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciaosvcs/Events/CIAO_Events.mpc
        * ciaosvcs/Events/CIAO_Direct/CIAO_DirectEvent.mpc
          Removed these files to get at least our builds running again

Fri Feb 10 16:11:35 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * ciaosvcs/Events/CIAO_Events.mpc
        * ciaosvcs/Events/CIAO_Direct/CIAO_DirectEvent.mpc

          Temporarily disable the build of these projects before
          the integration effort is complete to avoid pollute
          the scoreboard.

Fri Feb 10 14:28:14 UTC 2006  xiong,ming  <ming.xiong@vanderbilt.edu>

        * docs/tutorials/CoSMIC/01.html
        * docs/tutorials/CoSMIC/02.html
        * docs/tutorials/CoSMIC/index.html
        * docs/tutorials/CoSMIC/Images/fig10.jpg
        * docs/tutorials/CoSMIC/Images/fig11.jpg
        * docs/tutorials/CoSMIC/Images/fig2.jpg
        * docs/tutorials/CoSMIC/Images/fig4.jpg
        * docs/tutorials/CoSMIC/Images/fig5.jpg
        * docs/tutorials/CoSMIC/Images/fig6.jpg
        * docs/tutorials/CoSMIC/Images/fig7.jpg
        * docs/tutorials/CoSMIC/Images/fig8.jpg
        * docs/tutorials/CoSMIC/Images/fig9.jpg
        * docs/tutorials/CoSMIC/Model/Quoter.xme

          Updated  the CoSMIC tutorial so that it is consistent with
          the latest GME and CoSMIC.

Fri Feb 10 11:15:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Port_Activator.h:
          Doxygen improvements
